Se agrega sección top y se le agregan estilos

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
             </nav>
         </header>
         <main>
-            <section class="top">
-                <h1 class="title">This Website is Awesome!</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <section id="top">
+                <div class="top-izq">
+                    <h1 class="title">This Website is Awesome!</h1>
+                    <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="sign">Sign Up</button>
+                </div>
+                <img class="hades" src="img/EbU8CuKXYAUK_17.jpeg" alt="Hades apuntando hacia atrás">
             </section>
         </main>
     </body>
