Se agregó y dio estilos a sección middle-top

--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
                 </div>
                 <img class="hades" src="img/EbU8CuKXYAUK_17.jpeg" alt="Hades apuntando hacia atrás">
             </section>
+            <section id="middle-top">
+                <div class="card">
+                    <img src="img/Judai.png" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="img/Stone.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="img/Ocean.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+                <div class="card"><img src="img/el_baito.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+            </section>
         </main>
     </body>
 </html>
