--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
         <title>Landing Page</title>
     </head>
     <body>
@@ -12,7 +12,9 @@
             <p class="logo">Header Logo</p>
             <nav>
                 <ul class="nav">
-                    <li>Header Link One</li>
+                    <li>
+                        <a href="#middle-top">Information</a>
+                    </li>
                     <li>Header Link Two</li>
                     <li>Header Link Three</li>
                 </ul>
@@ -22,26 +24,46 @@
             <section id="top">
                 <div class="top-izq">
                     <h1 class="title">This Website is Awesome!</h1>
-                    <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <p class="secondary">
+                        This website has some subtext that goes here under the
+                        main title. It's a smaller font and the color is lower
+                        contrast
+                    </p>
                     <button class="sign">Sign Up</button>
                 </div>
-                <img class="hades" src="img/EbU8CuKXYAUK_17.jpeg" alt="Hades apuntando hacia atrás">
+                <img
+                    class="hades"
+                    src="img/EbU8CuKXYAUK_17.jpeg"
+                    alt="Hades apuntando hacia atrás"
+                />
             </section>
-            <section id="middle-top">
-                <div class="card">
-                    <img src="img/Judai.png" alt="">
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="card">
-                    <img src="img/Stone.jpg" alt="">
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="card">
-                    <img src="img/Ocean.jpg" alt="">
-                    <p>This is some subtext under an illustration or image</p>
-                </div>
-                <div class="card"><img src="img/el_baito.jpg" alt="">
-                    <p>This is some subtext under an illustration or image</p>
+            <section>
+                <h2 class="info">Some Random Information</h2>
+                <div id="middle-top">
+                    <div class="card">
+                        <img src="img/Judai.png" alt="" />
+                        <p>
+                            This is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="img/Stone.jpg" alt="" />
+                        <p>
+                            This is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="img/Ocean.jpg" alt="" />
+                        <p>
+                            This is some subtext under an illustration or image
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="img/el_baito.jpg" alt="" />
+                        <p>
+                            This is some subtext under an illustration or image
+                        </p>
+                    </div>
                 </div>
             </section>
         </main>
