Se agrega sección Quote, link y estilos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                     <li>
                         <a href="#middle-top">Information</a>
                     </li>
-                    <li>Header Link Two</li>
+                    <li>
+                        <a href="#quote">Quote</a>
+                    </li>
                     <li>Header Link Three</li>
                 </ul>
             </nav>
@@ -65,6 +67,10 @@
                         </p>
                     </div>
                 </div>
+            </section>
+            <section id="quote">
+                <q>Sacred blade of judgment, become my wings!</q>
+                <p>—Ein before using a full-power Disaresta</p>
             </section>
         </main>
     </body>
