--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <li>
                         <a href="#quote">Quote</a>
                     </li>
-                    <li>Header Link Three</li>
+                    <li>
+                        <a href="#bottom">Call to Action</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -72,6 +74,18 @@
                 <q>Sacred blade of judgment, become my wings!</q>
                 <p>—Ein before using a full-power Disaresta</p>
             </section>
+            <section id="bottom">
+                <div class="call">
+                    <div class="text">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </section>
         </main>
+        <footer>
+            <p>Copyright Ayrton Santillana 2023</p>
+        </footer>
     </body>
 </html>
